# BatchRenderer

./: .gitignore  CMakeLists.txt  README.md  build.bat
data/: default.glsl  default.shader
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: basic.h  glfw_platform.c  main.c  opengl_renderer.c  platform.h  renderer.h
